--- a/style.css
+++ b/style.css
@@ -141,7 +141,9 @@ button.primary:hover{
     margin: 5px 2px;
     /* box-shadow: 0px 0px 32px -7px #00199f; */
   }
-  
+  a{
+	text-decoration: none
+  }
   .social-margin {
     margin-right: 15px;
   }
